Making tokens, not lining up the token type strings and enums, not accounting for comments

--- a/README
+++ b/README
@@ -1,10 +1,13 @@
+I did option 3. The FSA table is in table.h
+I did not finish this project, the token identifiers aren't assigned to the token constructs and comments are not accounted for. Otherwise, the token structs themselves work fine.
+
 To build the program type "make" on the command line.
 
-To run the program with a file of your choice, type "./P0 yourfile" where "yourfile" is a file without the exention. ".sp18" will be added as the extension within the program. 
+To run the program with a file of your choice, type "./P1 yourfile" where "yourfile" is a file without the exention. ".fs182" will be added as the extension within the program. 
 
-	This will cause the output files to have the names "yourfile.preorder" "yourfile.inorder" "yourfile.postorder"
+	This will cause the output to stout
 
-If you have another file that you'd like to run without the extension ".sp18" then pipe it into the the program upon execution by typing the command: "./P0 < yourfile" 
+If you have another file that you'd like to run without the extension ".fs182" then pipe it into the the program upon execution by typing the command: "./P0 < yourfile" 
 
 	This will cause the output files to have the names: "out.preorder" "out.inorder" "out.postorder"
 
